--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         "stof/doctrine-extensions-bundle": "~1.1",
         "liip/imagine-bundle": "v1.4.3",
         "imagine/imagine": "v0.6.0",
-        "knplabs/knp-gaufrette-bundle": "~0.1",
+        "knplabs/knp-gaufrette-bundle": "0.3.2",
         "symfony-cmf/routing-bundle": "dev-master",
         "symfony-cmf/routing": "~1.4",
         "fpn/doctrine-extensions-taggable": "~0.9",
