--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "liip/imagine-bundle": "v1.4.3",
         "imagine/imagine": "v0.6.0",
         "knplabs/knp-gaufrette-bundle": "0.3.2",
-        "symfony-cmf/routing-bundle": "dev-master",
+        "symfony-cmf/routing-bundle": "1.4.0",
         "symfony-cmf/routing": "~1.4",
         "fpn/doctrine-extensions-taggable": "~0.9",
         "sensio/generator-bundle": "~3.0",
